fixing image alignment on help page

--- a/src/main/resources/static/help.css
+++ b/src/main/resources/static/help.css
@@ -6,6 +6,7 @@ h2 {
 }
 p.images {
     display: grid;
+    justify-self: center;
 }
 p.images span {
     text-align: center;
